--- a/openjob-spring-boot-samples/src/main/resources/application.properties
+++ b/openjob-spring-boot-samples/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8088
 spring.openjob.enable=true
+spring.openjob.server.host=openjob-server
 spring.openjob.worker.app-name=openjob
 spring.openjob.delay.enable=true
-spring.openjob.worker.heartbeat-interval=3
