:zap:modify config

--- a/openjob-java-samples/src/main/resources/openjob.properties
+++ b/openjob-java-samples/src/main/resources/openjob.properties
@@ -1,3 +1,5 @@
 openjob.server.port=25520
 openjob.worker.app.name=openjob
 openjob.worker.delay.enable=true
+openjob.server.host=openjob-server
+openjob.worker.port=25589
