:zap:update config

--- a/openjob-spring-boot-samples/src/main/resources/application.properties
+++ b/openjob-spring-boot-samples/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8088
 spring.openjob.enable=true
-spring.openjob.server.host=openjob-server
+# Default is local ip
+#spring.openjob.server.host=172.20.1.79
 spring.openjob.worker.app-name=openjob
 spring.openjob.delay.enable=true
