--- a/openjob-java-samples/src/main/resources/openjob.properties
+++ b/openjob-java-samples/src/main/resources/openjob.properties
@@ -1,5 +1,6 @@
 openjob.server.port=25520
 openjob.worker.app.name=openjob
 openjob.worker.delay.enable=true
-openjob.server.host=openjob-server
+# Default is local ip
+#openjob.server.host=172.20.1.79
 openjob.worker.port=25589
