--- a/openjob-spring-boot-samples/src/main/resources/application.properties
+++ b/openjob-spring-boot-samples/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8088
 spring.openjob.enable=true
 # Default is local ip
-#spring.openjob.server.host=172.20.1.79
+spring.openjob.server.address=http://localhost:8080
 spring.openjob.worker.app-name=openjob
 spring.openjob.delay.enable=true
