:art:update version

--- a/openjob-spring-boot-samples/src/main/resources/application.properties
+++ b/openjob-spring-boot-samples/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.openjob.enable=true
 # Default is local ip
 spring.openjob.server.address=http://localhost:8080
 spring.openjob.worker.app-name=openjob
-#spring.openjob.delay.enable=true
+spring.openjob.delay.enable=true
