--- a/openjob-java-samples/src/main/resources/openjob.properties
+++ b/openjob-java-samples/src/main/resources/openjob.properties
@@ -1,3 +1,3 @@
-openjob.server.port=25520
+openjob.server.address=http://localhost:8080
 openjob.worker.app.name=openjob
-openjob.worker.delay.enable=true
+openjob.worker.delay.enable=false
